--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ api-version: 1.18
 prefix: SurvivalFly
 authors: [ HayHay ]
 description: Lets you fly in survival mode while consuming hunger even faster!
-website: https://hayhay.cc
+website: https://hayhay.link
 commands:
   survivalfly:
     usage: /&l&2/survivalfly - &r/toggles your flight
